--add-exports for Ch12 example