@@ -14,6 +14,16 @@
     <build>
         <pluginManagement>
             <plugins>
+              <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                  <compilerArgs>
+                    <arg>--add-exports</arg>
+                    <arg>java.base/sun.text.resources=ALL-UNNAMED</arg>
+                  </compilerArgs>
+                </configuration>
+              </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
@@ -22,7 +32,7 @@
             </plugins>
         </pluginManagement>
     </build>
-    
+
     <dependencies>
         <!-- Testing -->
         <dependency>
